fix white space wrapping in centered navbar items

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -171,7 +171,10 @@
 
 /* 3 */
 .uk-navbar-center-left,
-.uk-navbar-center-right { position: absolute; }
+.uk-navbar-center-right { 
+    position: absolute;
+    white-space: nowrap;
+}
 
 .uk-navbar-center-left { right: 100%; }
 .uk-navbar-center-right { left: 100%; }
